--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -2,6 +2,7 @@
 # It can be edited online at https://dandiarchive.org/dandiset/000986
 # and obtained from the dandiarchive.
 '@context': https://raw.githubusercontent.com/dandi/schema/master/releases/0.6.7/context.json
+about: []
 access:
 - schemaKey: AccessRequirements
   status: dandi:OpenAccess
@@ -21,19 +22,25 @@ contributor:
   - dcite:ContactPerson
   schemaKey: Person
 dateCreated: '2024-05-09T00:01:24.541721+00:00'
-description: Extracellular recordings from the auditory cortex of awake mice (using
-  Neuropixels 1.0) during passive presentation of brief pure tones (2-32 kHz). The
-  dataset also includes pupil diameter and running speed.
+description: Extracellular recordings from the auditory cortex of awake head-fixed
+  mice (using Neuropixels 1.0) during passive presentation of brief pure tones (2-32
+  kHz). The dataset also includes pupil diameter and running speed.
+ethicsApproval: []
 id: DANDI:000986/draft
 identifier: DANDI:000986
+keywords: []
 license:
 - spdx:CC-BY-4.0
 manifestLocation:
 - https://api.dandiarchive.org/api/dandisets/000986/versions/draft/assets/
 name: Neuropixels recordings from mouse auditory cortex (and pupil diameter) during
   passive exposure to pure tones
+protocol: []
+relatedResource: []
 repository: https://dandiarchive.org
 schemaKey: Dandiset
 schemaVersion: 0.6.7
+studyTarget: []
 url: https://dandiarchive.org/dandiset/000986/draft
 version: draft
+wasGeneratedBy: []
